opam-version: "2.0"

synopsis: "Alba compiler"

description: """

Blabla

"""

maintainer: "Helmut Brandl <helmut.brandl@gmx.net>"

authors: [ "Helmut Brandl <helmut.brandl@gmx.net>" ]

license: "BSD-3-Clause"
homepage: "https://github.com/alba-lang/compiler"
dev-repo: "git+https://github.com/alba-lang/compiler.git"
bug-reports: "https://github.com/alba-lang/compiler/issues"


build: [
    ["dune" "subst"] {dev}
    ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]


depends: [
    "ocaml" {>= "4.12.0"}
    "dune" {>= "1.10"}
    "odoc" {with-doc}
    "ppx_inline_test" {>= "v0.13.0"}
    "fmlib" {>= "0.5.1"}
]
